remove accidental use of Map.of()'